--- a/templates/interest.html
+++ b/templates/interest.html
@@ -1,5 +1,53 @@
 {% extends "templates/base.html" %}
-{% block content %} 
-	<p>This is family page.</p>
-	<p>I'm the only child in my family.</p>
+{% block content %}
+<div class="container">
+	<div class="row">
+	  <div class="col-xs-12 col-sm-6 col-md-3">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2669.JPG" alt="...">
+	    </a>
+	  </div>
+	  <div class="col-xs-12 col-sm-6 col-md-3">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2669.JPG" alt="...">
+	    </a>
+	  </div>
+	  <div class="col-xs-12 col-sm-6 col-md-3">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2669.JPG" alt="...">
+	    </a>
+	  </div>
+	  <div class="col-xs-12 col-sm-6 col-md-3">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2669.JPG" alt="...">
+	    </a>
+	  </div>
+	  <div class="col-xs-12 col-sm-6 col-md-3">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2669.JPG" alt="...">
+	    </a>
+	  </div>
+	  <div class="col-xs-12 col-sm-6 col-md-3">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2669.JPG" alt="...">
+	    </a>
+	  </div>
+	  <div class="col-xs-12 col-sm-6 col-md-3">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2669.JPG" alt="...">
+	    </a>
+	  </div>
+	  <div class="col-xs-12 col-sm-6 col-md-3">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2669.JPG" alt="...">
+	    </a>
+	  </div>
+	  <div class="col-xs-12 col-sm-6 col-md-3">
+		<a href="#" class="thumbnail">
+	      <img src="/static/IMG_2669.JPG" alt="...">
+	    </a>
+	  </div>
+	  
+	</div>
+</div>
 {%endblock%}
