--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
 {% extends "templates/base.html" %}
 {% block content %}
+
+<link rel = "stylesheet" type="text/css" href="static/index.css">
+
 <div class="container">
 	<div class="jumbotron">
 		<!-- <img src = "static/coverPhoto.jpg" alt = "coverPhoto"/> -->
@@ -8,39 +11,140 @@
 		<p><a class="btn btn-primary btn-lg" href="#" role="button">别点了没连接</a></p>
 	</div>
 </div>
-<div class="container">
-	<div class="row">
-	  <div class="col-sm-6 col-md-6">
-	    <div class="thumbnail">
-	      <img src="static/IMG_3091.jpg" alt="...">
-	      <div class="caption">
-	        <h3>哎……</h3>
-	        <p>这个世界好复杂 我真是不懂啊</p>
-	        <p><a href="#" class="btn btn-primary" role="button">别点啊！</a> <a href="#" class="btn btn-default" role="button">千万别点啊！</a></p>
-	      </div>
-	    </div>
-	  </div>
-	  <div class="col-sm-6 col-md-6">
-	    <div class="thumbnail">
-	      <img src="static/IMG_4408.jpg" alt="...">
-	      <div class="caption">
-	        <h3>哎……</h3>
-	        <p>这盆多肉被我养死了</p>
-	        <p><a href="#" class="btn btn-primary" role="button">哭啊！</a> <a href="#" class="btn btn-default" role="button">好想哭啊！</a></p>
-	      </div>
-	    </div>
-	  </div>
-	  <div class="col-sm-6 col-md-6">
-	    <div class="thumbnail">
-	      <img src="static/IMG_3096.jpg" alt="...">
-	      <div class="caption">
-	        <h3>哎……</h3>
-	        <p>春天到了好想出去玩~~</p>
-	        <p><a href="#" class="btn btn-primary" role="button">想啊！</a> <a href="#" class="btn btn-default" role="button">好想粗去啊！</a></p>
-	      </div>
-	    </div>
-	  </div>
+<div class="container .tl">
+    <ul class="timeline">
+        <li>
+          <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record" rel="tooltip" title="你是Tooltip" id=""></i></a></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <img class="img-responsive" src="http://lorempixel.com/1600/500/sports/2" />
+              
+            </div>
+            <div class="timeline-body">
+              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              
+            </div>
+            
+            <div class="timeline-footer">
+                <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
+                <a><i class="glyphicon glyphicon-share"></i></a>
+                <a class="pull-right">Continuar Lendo</a>
+            </div>
+          </div>
+        </li>
+        
+        <li  class="timeline-inverted">
+          <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record invert" rel="tooltip" title="11 hours ago via Twitter" id=""></i></a></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <img class="img-responsive" src="http://lorempixel.com/1600/500/sports/2" />
+              
+            </div>
+            <div class="timeline-body">
+              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+             
+            </div>
+            
+            <div class="timeline-footer">
+                <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
+                <a><i class="glyphicon glyphicon-share"></i></a>
+                <a class="pull-right">Continuar Lendo</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record" rel="tooltip" title="11 hours ago via Twitter" id=""></i></a></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <img class="img-responsive" src="http://lorempixel.com/1600/500/sports/2" />
+              
+            </div>
+            <div class="timeline-body">
+              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              
+            </div>
+            
+            <div class="timeline-footer">
+                <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
+                <a><i class="glyphicon glyphicon-share"></i></a>
+                <a class="pull-right">Continuar Lendo</a>
+            </div>
+          </div>
+        </li>
+        
+        <li  class="timeline-inverted">
+          <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record invert" rel="tooltip" title="11 hours ago via Twitter" id=""></i></a></div>
+          <div class="timeline-panel">
+            <div class="timeline-body">
+              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              
+            </div>
+            
+            <div class="timeline-footer">
+                <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
+                <a><i class="glyphicon glyphicon-share"></i></a>
+                <a class="pull-right">Continuar Lendo</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record" rel="tooltip" title="11 hours ago via Twitter" id=""></i></a></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <img class="img-responsive" src="http://lorempixel.com/1600/500/sports/2" />
+              
+            </div>
+            <div class="timeline-body">
+              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              
+            </div>
+            
+            <div class="timeline-footer">
+                <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
+                <a><i class="glyphicon glyphicon-share"></i></a>
+                <a class="pull-right">Continuar Lendo</a>
+            </div>
+          </div>
+        </li>
+        
+        <li  class="timeline-inverted">
+          <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record invert" rel="tooltip" title="11 hours ago via Twitter" id=""></i></a></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <img class="img-responsive" src="http://lorempixel.com/1600/500/sports/2" />
+              
+            </div>
+            <div class="timeline-body">
+              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+              
+            </div>
+            
+            <div class="timeline-footer primary">
+                <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
+                <a><i class="glyphicon glyphicon-share"></i></a>
+                <a class="pull-right">Continuar Lendo</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record invert" rel="tooltip" title="11 hours ago via Twitter" id=""></i></a></div>
+          <div class="timeline-panel">
+            <div class="timeline-body">
+              <p><b>All the credits go to <a href="http://bootsnipp.com/rafamaciel">Rafamaciel</a></b></p>
+              <p>I only make it responsive and remove the empty spaces to be more like Facebook timeline!</p>
+            </div>
+            
+            <div class="timeline-footer primary">
+                <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
+                <a><i class="glyphicon glyphicon-share"></i></a>
+                <a class="pull-right">Continuar Lendo</a>
+            </div>
+          </div>
+        </li>
+        
+        <li class="clearfix" style="float: none;"></li>
+    </ul>
+</div>
 
-	</div>
 </div>
 {%endblock%}
