--- a/templates/interest.html
+++ b/templates/interest.html
@@ -1,10 +1,11 @@
 {% extends "templates/base.html" %}
 {% block content %}
+
 <div class="container">
 	<div class="row">
 	  <div class="col-xs-12 col-sm-6 col-md-3">
-		<a href="#" class="thumbnail">
-	      <img src="/static/IMG_2669.JPG" alt="...">
+		<a href="#" class="thumbnail" id="thumbnailImage">
+	        <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
 	  <div class="col-xs-12 col-sm-6 col-md-3">
