--- a/static/base.css
+++ b/static/base.css
@@ -2,6 +2,9 @@ body{
 	background-image: url("/static/bkg.jpg");
 	background-attachment: fixed;
 }
+.mobileView{
+	display:none;
+}
 .navbar {
    background: rgba(0,0,0,0.4);
    border: 0px;
@@ -27,13 +30,6 @@ body{
 	right: 5%;
 	margin: 5px;
 }
-
-
-
-.panel-footer{
-	border: 0px;
-	background: rgba(0,0,0,0.4);
-}
 .img-square{
 	position: absolute;
 	margin-top: 10px;
@@ -41,7 +37,7 @@ body{
     width:30px; /* you can use % */
     height: 30px;
     border: 1px solid #B3B5B5;
-    z-index:1; 
+    /*z-index:0; */
     border-radius: 3px;
 }
 
@@ -87,6 +83,9 @@ body{
 	/*margin-bottom: 0px;*/
 }
 @media (max-width: 890px){
+	.mobileView{
+		display:none;
+	}
 	.navbar{
 		/*border: 3px solid red;*/
 		margin-bottom: 0px;
@@ -139,7 +138,7 @@ body{
 	}
 	.main_content{
 		position: relative;
-	    z-index: 10;
+	    /*z-index: 10;*/
 	    margin-left: 140px;
 	    min-height: 100%;
 	    padding: 20px 20px;
@@ -147,7 +146,6 @@ body{
 	.main_content > .container{
 	    position: relative;
 	    min-height: 100%;
-	    border: 2px solid red;
 	    max-width: 100% ;
 	    max-width: 100% ;
 	    max-width: 100% ;
@@ -169,12 +167,7 @@ body{
 	    bottom: 0;
 	    max-height: none;
 	}
-	footer{
-		/*border: 2px solid blue;*/
-		width:140px !important ;
-	}
 	.contactInfo{
-		/*border: 2px solid red;*/
 		display: inline-block;
 		width: 140px;
 		margin-left: -15px;
@@ -201,16 +194,113 @@ body{
 	
 }
 @media (max-width: 450px){
+	.mobileView{
+		display:block;
+		background-color: rgba(0,0,0,0.4);
+		text-align: center;
+		height: 50px;
+	}
+	.dropdown > button{
+		border-radius: 0px;
+		background-color: transparent;
+		border: 0px solid transparent;
+		color: white;
+		height:50px;
+	}
+	.dropdown > .dropdown-menu{
+		text-align: center;
+		width:80%;
+		border-radius: 0px;
+		margin-left: 10%;
+		margin-right: 10%;
+		background-color: rgba(0,0,0,0.8);
+	}
+	.dropdown-menu > li{
+		width:100%;
+		height: 45px;
+		margin:0px;
+	}
+	.dropdown-menu > li> a{
+		display: inline-block;
+		width:100%;
+		height: 44px;
+		margin:0px;
+		padding-top:14px;
+
+	}
 	.main_content{
-		display: none;
+		display: relative;
+		/*border: 2px dashed purple;*/
+		width: 100%;
+		margin-left: 0px;
 	}
 	footer{
+		display: inline-block;
+		/*border: 1px solid white;*/
+		width: 100%;
+		height: 60px;
+		margin-left: 0px;
+		margin-right: 0px;
+		position: relative;
+		margin-bottom: 0px;
+	}
+	.panel-footer{
+		display: relative;
+		width: 100%;
+		height: 150px;
+		margin-top: 0px;
+	    left: 0;
+	    top: 0px;
+	    bottom: 0;
+	    background-color: rgba(0,0,0,0.4);
+	    position: relative;
+	}
+	.contactInfo {
+		/*border: 2px solid yellow;*/
+		display: block;
+		width: 90%;
+		margin-left: 5%;
+		text-align: center;
+	}
+	.socialIcons{
+		/*border: 2px solid white;*/
+		margin-right: 5%;
+		margin-left: 5%;
+		width: 80%;
+	}
+	.socialIcons >.icon{
+		/*border: 2px solid yellow;*/
+		display: inline-block;
+	}
+	.copyright > p{
+		/*border: 2px solid yellow;*/
+		display: block;
+		margin-top: 90px;
+		text-align: center;
+	}
+	.navbar{
 		display: none;
 	}
-	.nav{
-		
+	.img-square{
+		position: absolute;
+		margin-top: 10px;
+		margin-left: 10px;
+	    width:30px; /* you can use % */
+	    height: 30px;
+	    border: 1px solid #B3B5B5;
+	    /*z-index:1; */
+	    border-radius: 3px;
 	}
-	
+	.name{
+		border: 1px solid yellow;
+		position: absolute;
+		margin-top: 10px;
+		margin-left: 0px;
+		display: inline;
+	}
+	.container{
+		/*border: 1px solid blue;*/
+	}
 
 }
 
@@ -283,5 +373,10 @@ body{
 .icon-button:hover .fa-instagram,
 .icon-button:hover .fa-github {
 	color: white;
+}
+
+
+#myModal{
+	z-index: 1;
 }
 
