--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,10 @@
 {% set title = dict[path].upper()%}
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Mengtian - {{title}}</title>
+
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -13,22 +16,40 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
 	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	<link rel = "stylesheet" type="text/css" href="static/base.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 	<script type = "text/JavaScript" src ="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script type = "text/JavaScript">
 		$(function(){$('a').each(function(){
-							if($(this).prop("href") == window.location.href) {
-								$(this).closest('li').addClass('active');
-							}
-						});
-		$('body').scrollspy({ target: '#navbar-example' })
+				if($(this).prop("href") == window.location.href) {
+					$(this).closest('li').addClass('active');
+				}
+			});
 		});
-		// document.getElementById("container").className = "scroll";
+		$("#thumbnailImage").click(function() {
+		   $(this).attr('width', '400');
+		    $(this).attr('height', '300');
+		});
+		$(function ()
+					{
+		    $('#thumbnailImage').on('click', function ()
+		    {
+		        $(this).width(800);
+		    });
+		});
+		$('#myModal').on('shown.bs.modal', function () {
+			  $('#myInput').focus()
+		})
+
 	</script>
+	<link rel = "stylesheet" type="text/css" href="static/base.css">
+
 
 </head>
-<body data-spy="scroll" data-target=".navbar">
+<body data-spy="scroll">
 	<header>
 		<nav class="navbar navbar-default navbar-static-top">
 			<img src="/static/IMG_2669.JPG" class="img-square" alt="personalIcon">
@@ -45,6 +66,23 @@
 				{% endfor %}
 				</ul>
 			</div>
+		</nav>
+		<nav class="mobileView">
+			<div class="dropdown">
+			    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+			    Mengtian Xu
+			    <span class="caret"></span></button>
+			    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+			    	{% for caption, href in [('Home','index') ,('Resume','resume') ,('Interest','interest') ,('Timeline', 'timeline')] %}
+					{% if path==href%}
+						{% set caption=caption.upper() %}
+					{% endif %}
+							<li role="presentation">
+								<a role="menuitem" tabindex="-1" href="{{ href }}">{{ caption }}</a>
+							</li>
+					{% endfor %}
+			    </ul>
+			  </div>
 		</nav>
 	</header>
 	<div class="main_content">
