--- a/static/base.css
+++ b/static/base.css
@@ -13,6 +13,9 @@ body{
 	border: 0px;
 	background: rgba(0,0,0,0.4);
 }
+footer{
+	border: 2px solid white;
+}
 
 .name{
 	position:absolute;
@@ -125,6 +128,7 @@ body{
 		margin-top: 150px;
 		margin-left: 5%;
 		width: 90% ;
+
 	}
 	.nav{
 		display:absolute;
@@ -138,6 +142,7 @@ body{
 	}
 	.main_content{
 		position: relative;
+		/*border: 4px solid white;*/
 	    /*z-index: 10;*/
 	    margin-left: 140px;
 	    min-height: 100%;
@@ -147,9 +152,7 @@ body{
 	    position: relative;
 	    min-height: 100%;
 	    max-width: 100% ;
-	    max-width: 100% ;
-	    max-width: 100% ;
-	    max-width: 100% ;
+	    /*border: 4px solid purple;*/
 /*	    max-width: calc(100% - 0px)!important ;
 	    max-width: -webkit-calc(100% - 0px);
 	    max-width: -o-calc(100% - 10px);
@@ -376,7 +379,34 @@ body{
 }
 
 
-#myModal{
-	z-index: 1;
+.expanded{
+	width:100%;
+	border: 3px solid red;
+}
+
+.scrollToTop{
+	background-color: rgba(0,0,0,0,7);
+	width: 30px;
+	position: absolute;
+	/*position: fixed; */
+
+}
+.scrollToTop{
+	width:80px; 
+	height:40px;
+	padding:10px; 
+	text-align:center; 
+	background: whiteSmoke;
+	font-weight: bold;
+	color: #444;
+	text-decoration: none;
+	position:fixed;
+	top:75px;
+	right:40px;
+	display:none;
+	background: rgba(0,0,0,0.6) 0px 20px;
+}
+.scrollToTop:hover{
+	text-decoration:none;
 }
 
