--- a/templates/interest.html
+++ b/templates/interest.html
@@ -3,52 +3,57 @@
 
 <div class="container">
 	<div class="row">
-	  <div class="col-xs-12 col-sm-6 col-md-3">
-		<a href="#" class="thumbnail" id="thumbnailImage">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
+		<a href="#" class="thumbnail">
 	        <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
-	  <div class="col-xs-12 col-sm-6 col-md-3">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
 	      <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
-	  <div class="col-xs-12 col-sm-6 col-md-3">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
 	      <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
-	  <div class="col-xs-12 col-sm-6 col-md-3">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
 	      <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
-	  <div class="col-xs-12 col-sm-6 col-md-3">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
 	      <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
-	  <div class="col-xs-12 col-sm-6 col-md-3">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
 	      <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
-	  <div class="col-xs-12 col-sm-6 col-md-3">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
 	      <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
-	  <div class="col-xs-12 col-sm-6 col-md-3">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
 	      <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
-	  <div class="col-xs-12 col-sm-6 col-md-3">
+	  <div class="col-xs-12 col-sm-6 col-md-3 thumbnailImage">
 		<a href="#" class="thumbnail">
 	      <img src="/static/IMG_2669.JPG" alt="...">
 	    </a>
 	  </div>
 	  
 	</div>
+	<span id="top-link-block" class="hidden">
+    <a href="#top" class="well well-sm"  onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
+        <i class="glyphicon glyphicon-chevron-up"></i> Back to Top
+    </a>
+</span><!-- /top-link-block -->
 </div>
 {%endblock%}
