--- a/static/base.css
+++ b/static/base.css
@@ -14,7 +14,7 @@ body{
 	background: rgba(0,0,0,0.4);
 }
 footer{
-	border: 2px solid white;
+	/*border: 2px solid white;*/
 }
 
 .name{
@@ -85,7 +85,11 @@ footer{
 	display: inline-block;
 	/*margin-bottom: 0px;*/
 }
+
 @media (max-width: 890px){
+	audio{
+		display: none;
+	}
 	.mobileView{
 		display:none;
 	}
@@ -197,6 +201,9 @@ footer{
 	
 }
 @media (max-width: 450px){
+		audio{
+		display: none;
+		}
 	.mobileView{
 		display:block;
 		background-color: rgba(0,0,0,0.4);
@@ -248,13 +255,13 @@ footer{
 		margin-bottom: 0px;
 	}
 	.panel-footer{
-		display: relative;
+		/*display: relative;*/
 		width: 100%;
 		height: 150px;
 		margin-top: 0px;
 	    left: 0;
 	    top: 0px;
-	    bottom: 0;
+	    /*bottom: 0;*/
 	    background-color: rgba(0,0,0,0.4);
 	    position: relative;
 	}
@@ -392,10 +399,11 @@ footer{
 
 }
 .scrollToTop{
-	width:80px; 
+	width:180px; 
 	height:40px;
 	padding:10px; 
 	text-align:center; 
+	color: white !important ;
 	background: whiteSmoke;
 	font-weight: bold;
 	color: #444;
@@ -408,5 +416,8 @@ footer{
 }
 .scrollToTop:hover{
 	text-decoration:none;
+}
+audio{
+	/*border: 3px solid yellow;*/
 }
 
