--- a/templates/index.html
+++ b/templates/index.html
@@ -145,6 +145,50 @@
         <li class="clearfix" style="float: none;"></li>
     </ul>
 </div>
+</div>
+<div class="container EmailMe">
 
+<style>
+    h1
+    {
+      font-family : Arial, Helvetica, sans-serif;
+      font-size : 16px;
+        font-weight : bold;
+    }
+    label,a 
+    {
+      font-family : Arial, Helvetica, sans-serif;
+      font-size : 12px; 
+    }
+
+</style>  
+<!-- a helper script for vaidating the form-->
+<script language="JavaScript" src="/static/gen_validatorv31.js" type="text/javascript">
+</script>
+
+<h1>Contact Me</h1>
+<form method="POST" name="contactform" action="MAILTO:mtxu@umich.edu"> 
+<p>
+<label for='name'>Your Name:</label> <br>
+<input type="text" name="name">
+</p>
+<p>
+<label for='email'>Email Address:</label> <br>
+<input type="text" name="email"> <br>
+</p>
+<p>
+<label for='message'>Message:</label> <br>
+<textarea name="message"></textarea>
+</p>
+<input type="submit" value="Submit"><br>
+</form>
+
+<script language="JavaScript">
+// Code for validating the form
+var frmvalidator  = new Validator("contactform");
+frmvalidator.addValidation("name","req","Please provide your name"); 
+frmvalidator.addValidation("email","req","Please provide your email"); 
+frmvalidator.addValidation("email","email","Please enter a valid email address"); 
+</script>
 </div>
 {%endblock%}
